Expose task dependencies in API
